update XGboost results

--- a/Code/Modelling/XGBoost/Rating Model - Exclude Previous Rating/XGBoost_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/XGBoost/Rating Model - Exclude Previous Rating/XGBoost_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:32:26.642565Z",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:32:28.429720Z",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:32:29.689050Z",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:32:29.948626Z",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:32:30.023103Z",
@@ -188,26 +188,26 @@
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBClassifier(base_score=None, booster=&#x27;gbtree&#x27;, callbacks=None,\n",
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBClassifier(base_score=None, booster=&#x27;gbtree&#x27;, callbacks=None,\n",
        "              colsample_bylevel=None, colsample_bynode=None,\n",
        "              colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
        "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
-       "              gamma=None, grow_policy=None, importance_type=None,\n",
+       "              gamma=0.1, grow_policy=None, importance_type=None,\n",
        "              interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
        "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "              max_delta_step=None, max_depth=3, max_leaves=None,\n",
+       "              max_delta_step=None, max_depth=20, max_leaves=None,\n",
        "              min_child_weight=5, missing=nan, monotone_constraints=None,\n",
-       "              multi_strategy=None, n_estimators=100, n_jobs=-1, num_class=10,\n",
-       "              num_parallel_tree=None, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBClassifier</label><div class=\"sk-toggleable__content\"><pre>XGBClassifier(base_score=None, booster=&#x27;gbtree&#x27;, callbacks=None,\n",
+       "              multi_strategy=None, n_estimators=1000, n_jobs=-1, num_class=10,\n",
+       "              num_parallel_tree=None, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBClassifier</label><div class=\"sk-toggleable__content\"><pre>XGBClassifier(base_score=None, booster=&#x27;gbtree&#x27;, callbacks=None,\n",
        "              colsample_bylevel=None, colsample_bynode=None,\n",
        "              colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
        "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
-       "              gamma=None, grow_policy=None, importance_type=None,\n",
+       "              gamma=0.1, grow_policy=None, importance_type=None,\n",
        "              interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
        "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "              max_delta_step=None, max_depth=3, max_leaves=None,\n",
+       "              max_delta_step=None, max_depth=20, max_leaves=None,\n",
        "              min_child_weight=5, missing=nan, monotone_constraints=None,\n",
-       "              multi_strategy=None, n_estimators=100, n_jobs=-1, num_class=10,\n",
+       "              multi_strategy=None, n_estimators=1000, n_jobs=-1, num_class=10,\n",
        "              num_parallel_tree=None, ...)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
@@ -215,16 +215,16 @@
        "              colsample_bylevel=None, colsample_bynode=None,\n",
        "              colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
        "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
-       "              gamma=None, grow_policy=None, importance_type=None,\n",
+       "              gamma=0.1, grow_policy=None, importance_type=None,\n",
        "              interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
        "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "              max_delta_step=None, max_depth=3, max_leaves=None,\n",
+       "              max_delta_step=None, max_depth=20, max_leaves=None,\n",
        "              min_child_weight=5, missing=nan, monotone_constraints=None,\n",
-       "              multi_strategy=None, n_estimators=100, n_jobs=-1, num_class=10,\n",
+       "              multi_strategy=None, n_estimators=1000, n_jobs=-1, num_class=10,\n",
        "              num_parallel_tree=None, ...)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:32:30.033474Z",
@@ -284,32 +284,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>num__EBIT</td>\n",
-       "      <td>0.001143</td>\n",
-       "      <td>0.001265</td>\n",
+       "      <td>-0.000362</td>\n",
+       "      <td>0.000779</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>num__common_plus_preferred_stock</td>\n",
-       "      <td>0.002673</td>\n",
-       "      <td>0.001990</td>\n",
+       "      <td>0.003353</td>\n",
+       "      <td>0.001677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>num__workingCapital</td>\n",
-       "      <td>-0.001496</td>\n",
-       "      <td>0.002050</td>\n",
+       "      <td>-0.001648</td>\n",
+       "      <td>0.001732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>num__Ratio_A</td>\n",
-       "      <td>0.000314</td>\n",
-       "      <td>0.000604</td>\n",
+       "      <td>-0.000301</td>\n",
+       "      <td>0.001014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>num__Ratio_B</td>\n",
-       "      <td>0.003512</td>\n",
-       "      <td>0.002045</td>\n",
+       "      <td>0.000771</td>\n",
+       "      <td>0.002071</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -320,32 +320,32 @@
        "    <tr>\n",
        "      <th>148</th>\n",
        "      <td>cat__Sector_Industrials</td>\n",
-       "      <td>0.002072</td>\n",
-       "      <td>0.000851</td>\n",
+       "      <td>0.000324</td>\n",
+       "      <td>0.000642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
        "      <td>cat__Sector_Information Technology</td>\n",
-       "      <td>0.000576</td>\n",
-       "      <td>0.000951</td>\n",
+       "      <td>-0.000016</td>\n",
+       "      <td>0.000387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>150</th>\n",
        "      <td>cat__Sector_Materials</td>\n",
-       "      <td>0.000684</td>\n",
-       "      <td>0.000406</td>\n",
+       "      <td>0.000086</td>\n",
+       "      <td>0.000263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>151</th>\n",
        "      <td>cat__Sector_Real Estate</td>\n",
-       "      <td>-0.000014</td>\n",
-       "      <td>0.000203</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>152</th>\n",
        "      <td>cat__Sector_Utilities</td>\n",
-       "      <td>0.024965</td>\n",
-       "      <td>0.003304</td>\n",
+       "      <td>0.002735</td>\n",
+       "      <td>0.001781</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -354,22 +354,22 @@
       ],
       "text/plain": [
        "                                feature      mean       std\n",
-       "0                             num__EBIT  0.001143  0.001265\n",
-       "1      num__common_plus_preferred_stock  0.002673  0.001990\n",
-       "2                   num__workingCapital -0.001496  0.002050\n",
-       "3                          num__Ratio_A  0.000314  0.000604\n",
-       "4                          num__Ratio_B  0.003512  0.002045\n",
+       "0                             num__EBIT -0.000362  0.000779\n",
+       "1      num__common_plus_preferred_stock  0.003353  0.001677\n",
+       "2                   num__workingCapital -0.001648  0.001732\n",
+       "3                          num__Ratio_A -0.000301  0.001014\n",
+       "4                          num__Ratio_B  0.000771  0.002071\n",
        "..                                  ...       ...       ...\n",
-       "148             cat__Sector_Industrials  0.002072  0.000851\n",
-       "149  cat__Sector_Information Technology  0.000576  0.000951\n",
-       "150               cat__Sector_Materials  0.000684  0.000406\n",
-       "151             cat__Sector_Real Estate -0.000014  0.000203\n",
-       "152               cat__Sector_Utilities  0.024965  0.003304\n",
+       "148             cat__Sector_Industrials  0.000324  0.000642\n",
+       "149  cat__Sector_Information Technology -0.000016  0.000387\n",
+       "150               cat__Sector_Materials  0.000086  0.000263\n",
+       "151             cat__Sector_Real Estate  0.000000  0.000000\n",
+       "152               cat__Sector_Utilities  0.002735  0.001781\n",
        "\n",
        "[153 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
