--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -9,12 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Packages\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "import dataframe_image as dfi # NOTE: YOU MUST HAVE GOOGLE CHROME INSTALLED FOR THIS TO WORK CORRECTLY\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +342,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -505,6 +508,11 @@
     "    # Export to Excel\n",
     "    model_comparison_df.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df.xlsx', index = False)\n",
     "\n",
+    "    if include_exclude_previous == 'exclude_previous_':\n",
+    "        exclude_previous_model_comparison_df = model_comparison_df\n",
+    "    else:\n",
+    "        include_previous_model_comparison_df = model_comparison_df\n",
+    "\n",
     "    # Export to LaTeX\n",
     "    # Format columns\n",
     "    for col in model_comparison_df.columns:\n",
@@ -524,12 +532,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Styled DFI Versions for Presentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_91f9a th {\n",
+       "  text-align: center;\n",
+       "}\n",
+       "#T_91f9a_row0_col0, #T_91f9a_row0_col1, #T_91f9a_row1_col0, #T_91f9a_row1_col1, #T_91f9a_row2_col0, #T_91f9a_row2_col1, #T_91f9a_row3_col0, #T_91f9a_row3_col1 {\n",
+       "  text-align: center;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_91f9a\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_91f9a_level0_col0\" class=\"col_heading level0 col0\" >Model/Baseline</th>\n",
+       "      <th id=\"T_91f9a_level0_col1\" class=\"col_heading level0 col1\" >Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_91f9a_row0_col0\" class=\"data row0 col0\" >Altman's Z</td>\n",
+       "      <td id=\"T_91f9a_row0_col1\" class=\"data row0 col1\" >0.1923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_91f9a_row1_col0\" class=\"data row1 col0\" >Financial Variables and Sector</td>\n",
+       "      <td id=\"T_91f9a_row1_col1\" class=\"data row1 col1\" >0.6225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_91f9a_row2_col0\" class=\"data row2 col0\" >Financial Variables, Sector, and NLP Features</td>\n",
+       "      <td id=\"T_91f9a_row2_col1\" class=\"data row2 col1\" >0.6333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_91f9a_row3_col0\" class=\"data row3 col0\" >Majority Baseline</td>\n",
+       "      <td id=\"T_91f9a_row3_col1\" class=\"data row3 col1\" >0.3247</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x287c167a120>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Styling\n",
+    "#print(exclude_previous_model_comparison_df)\n",
+    "exclude_previous_model_comparison_sty = (exclude_previous_model_comparison_df.reset_index(drop=True)[['Model/Baseline', 'Accuracy']]\n",
+    "                            .style\n",
+    "                            .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(exclude_previous_model_comparison_sty, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'exclude_previous_' + 'model_comparison_df.png')\n",
+    "exclude_previous_model_comparison_sty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_9d3f6 th {\n",
+       "  text-align: center;\n",
+       "}\n",
+       "#T_9d3f6_row0_col0, #T_9d3f6_row0_col1, #T_9d3f6_row1_col0, #T_9d3f6_row1_col1, #T_9d3f6_row2_col0, #T_9d3f6_row2_col1, #T_9d3f6_row3_col0, #T_9d3f6_row3_col1 {\n",
+       "  text-align: center;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_9d3f6\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9d3f6_level0_col0\" class=\"col_heading level0 col0\" >Model/Baseline</th>\n",
+       "      <th id=\"T_9d3f6_level0_col1\" class=\"col_heading level0 col1\" >Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9d3f6_row0_col0\" class=\"data row0 col0\" >Altman's Z</td>\n",
+       "      <td id=\"T_9d3f6_row0_col1\" class=\"data row0 col1\" >0.7442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9d3f6_row1_col0\" class=\"data row1 col0\" >Financial Variables and Sector</td>\n",
+       "      <td id=\"T_9d3f6_row1_col1\" class=\"data row1 col1\" >0.9508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9d3f6_row2_col0\" class=\"data row2 col0\" >Financial Variables, Sector, and NLP Features</td>\n",
+       "      <td id=\"T_9d3f6_row2_col1\" class=\"data row2 col1\" >0.9508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_9d3f6_row3_col0\" class=\"data row3 col0\" >Majority Baseline</td>\n",
+       "      <td id=\"T_9d3f6_row3_col1\" class=\"data row3 col1\" >0.3247</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x287c167ab70>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "include_previous_model_comparison_sty = (include_previous_model_comparison_df.reset_index(drop=True)[['Model/Baseline', 'Accuracy']]\n",
+    "                            .style\n",
+    "                            .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(include_previous_model_comparison_sty, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'include_previous_' + 'model_comparison_df.png')\n",
+    "include_previous_model_comparison_sty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Most Complex Classification Rep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -890,14 +1035,14 @@
       "Majority baselines are the same: True\n",
       "                                  Model/Baseline Accuracy  \\\n",
       "0                                     Altman's Z   0.9535   \n",
-      "0                 Financial Variables and Sector   0.9472   \n",
-      "0  Financial Variables, Sector, and NLP Features   0.9463   \n",
+      "0                 Financial Variables and Sector   0.7004   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.7165   \n",
       "0                              Majority Baseline   0.9535   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
       "0                     0.9091                  0.9535   0.9308  \n",
-      "0                     0.9097                  0.9472   0.9281  \n",
-      "0                     0.9096                  0.9463   0.9276  \n",
+      "0                     0.9075                  0.7004   0.7895  \n",
+      "0                     0.9154                  0.7165   0.8017  \n",
       "0                                                              \n"
      ]
     }
@@ -966,7 +1111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
